2017-09-01  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Make reporting of NSS
	function lookup failures more reliable.

2017-09-01  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gethosts): Use h_errno directly.
	(getcanonname): Likewise.
	(gaih_inet): Likewise.

2017-09-01  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gethosts): Use errno directly.
	(getcanonname): Likewise.
	(gaih_inet): Likewise.

2017-08-08  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Remove unreachable
	return statement.

2017-06-24  Florian Weimer  <fweimer@redhat.com>

	[BZ #21295]
	* resolv/tst-resolv-basic.c (do_test): Add new test cases.

2017-06-24  Dmitry Bilunov  <kmeaw@kmeaw.com>

	[BZ #21295]
	* sysdeps/posix/getaddrinfo.c (convert_hostent_to_gaih_addrtuple):
	Append addresses at the end of the list.

2017-05-11  Florian Weimer  <fweimer@redhat.com>

	* support/support_format_addrinfo.c (format_ai_flags_1): Renamed
	from format_ai_flags.
	(format_ai_flags): New function.  Incorporate flag formatting code
	from format_ai_one.
	(format_ai_canonname): New function.
	(format_ai_one): Remove flags parameter.
	(format_ai_family): Likewise.
	(support_format_addrinfo): Call format_ai_flags,
	format_ai_canonname.
	* resolv/tst-resolv-basic.c (check_ai_hints): Extracted from
	check_ai.
	(check_ai): Call check_ai_hints.
	(do_test): Add AI_CANONNAME tests.

2017-04-13  Florian Weimer  <fweimer@redhat.com>

	[BZ #21359]
	* resolv/ns_name.c (ns_name_pack): Do not require an additional
	byte in the destination buffer.  Avoid out-of-bounds pointer
	arithmetic.
	* resolv/Makefile (tests): Add tst-ns_name_compress.
	(tst-ns_name_compress): Link with -lresolv.
	* resolv/tst-ns_name_compress.c: New file.
	* resolv/tst-resolv-basic.c (LONG_NAME): Define.
	(response): Recognize LONG_NAME.
	(do_test): Add LONG_NAME tests.